# projewski-pocket-book

./: README.md
games/sokoban/: .gitignore  CMakeLists.txt
games/sokoban/resources/bagatelle/: global.desc  level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020
games/sokoban/resources/cantrip/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020
games/sokoban/resources/dh1/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010
games/sokoban/resources/dh2/: global.desc  level001  level002  level003  level004  level005  level006  level007  level008  level009  level010
games/sokoban/resources/domyslny/: global.desc  level001  level002  level004  level011  level012  level013  level014  level016  level019  level020  level024  level025  level026  level029  level030  level032  level036  level037  level044  level047  level048  level049  level050
games/sokoban/resources/grigr/: global.desc  level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  (+101 more)
games/sokoban/resources/loma/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010
games/sokoban/resources/maelstorm/: global.desc  level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020
games/sokoban/resources/mass_microban/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  (+95 more)
games/sokoban/resources/mass_sasquatch/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  (+10 more)
games/sokoban/resources/microban/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  (+115 more)
games/sokoban/resources/minicosmos/: global.desc  level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level040  minicosmos.f
games/sokoban/resources/sasquatch/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  (+10 more)
games/sokoban/resources/sasquatch_III/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  (+10 more)
games/sokoban/resources/sasquatch_IV/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  level029  level030  level031  level032  level033  level034  level035  level036  level037  level038  level039  level040  (+10 more)
games/sokoban/resources/sasquatch_V/: level001  level002  level003  level004  level005  level006  level007  level008  level009  level010  level011  level012  level013  level014  level015  level016  level017  level018  level019  level020  level021  level022  level023  level024  level025  level026  level027  level028  (+22 more)
games/sokoban/src/: array.c  array.h  bitmaps.c  bitmaps.h  boardelement.h  button.c  button.h  collection.c  collection.h  config.c  config.h  mystr.c  mystr.h  sokoban.c  stagegame.c  stagegame.h  stagemain.c  stagemain.h  stagestart.c  stagestart.h  tablica.c  tablica.h
(+121 files in other folders)
